# Husk

./: .gitignore  .gitmodules  CLA.md  CONTRIBUTING.md  LICENSE-EXAMPLES  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  mcp-setup.md  policy-rules.md  quickstart.md
engine/: README.md  build.zig  build.zig.zon
engine/spike/: README.md  fixture.html  package-lock.json  package.json  snapshot-poc.mjs
examples/01-wikipedia-research/: README.md
examples/02-static-form-fill/: README.md
examples/03-shopify-pricecheck/: README.md
mcp/: README.md  package.json  tsconfig.json
mcp/src/: binary.ts  client.ts  husk-tools.ts  index.ts  orchestrator.ts  proxy.ts  routing-plan.md  tool-map.ts  tool-surface.ts  transform.ts  types.ts
mcp/tests/: binary.test.ts  client.test.ts  husk-tools.test.ts  inspect-tool.test.ts  intend-tool.test.ts  orchestrator.test.ts  proxy.test.ts  (+5 more)
orchestrator/: package.json  vitest.config.ts
protocol/: README.md  jsonrpc.openapi.yaml  policy.schema.json  snapshot.schema.json
sdk-py/: README.md  pyproject.toml
sdk-py/husk/: __init__.py  _credentials.py  _session.py  _snapshot.py  _transport.py  _types.py  _vault.py
sdk-py/tests/: test_credentials.py  test_session.py  test_smoke.py  test_snapshot.py  test_transport.py  test_types.py  test_vault.py
sdk-py/tests/integration/: test_sdk_e2e.py
sdk-ts/: package.json  tsconfig.json
(+313 files in other folders)
